[gd_scene load_steps=2 format=3 uid="uid://c9xm5wq7kp4n3"]

[ext_resource type="Script" path="res://scripts/boarding/search_popup.gd" id="1_popup"]

[node name="SearchPopup" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_popup")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.85, 1, 1)
theme_override_font_sizes/font_size = 20
text = "SEARCHING CONTAINER"
horizontal_alignment = 1

[node name="Hint" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Click items to reveal them, then drag to take"
horizontal_alignment = 1

[node name="ItemsArea" type="PanelContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsContainer" type="Control" parent="Panel/VBox/ItemsArea"]
layout_mode = 2
custom_minimum_size = Vector2(0, 250)

[node name="ButtonsHBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="TakeAllButton" type="Button" parent="Panel/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
text = "Take All"

[node name="CloseButton" type="Button" parent="Panel/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
text = "Close [ESC]"
